[package]
name = "jaamlong"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.7.1", features = [ "runtime-tokio-rustls", "postgres", "macros", "uuid", "time"] }
dotenv = "0.15.0"
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
anyhow = "1.0.72"
uuid = "1.4.1"
chrono = "0.4.26"

[profile.dev.package.sqlx-macros]
opt-level = 3
